--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     "tailwindcss": "^3.0.0",
     "typescript": "^4.4.4"
   },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
+  },
   "prettier": {
     "arrowParens": "always",
     "singleQuote": true,
