--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "copy-to-clipboard": "^3.3.1",
     "dayjs": "^1.11.0",
     "framer-motion": "^5.4.1",
+    "i18next": "^22.4.7",
     "next": "^12.0.4",
     "next-i18next": "^13.0.2",
     "next-plausible": "^3.0.0",
@@ -25,6 +26,7 @@
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^12.1.1",
     "react-share": "^4.4.0",
     "rss": "^1.2.2",
     "slugify": "^1.6.1",
